tests/unit-fail-compilation/j060d.ref
j060d.c:2:7: error: Declaration for f appears with invalid storage class specifiers.
  Undefined behavior (UB-TDG3). See C11 sec. 6.7.1:7, J.2:1 item 60
Translation failed (config dumped). Run kcc -d j060d.c to see commands run.
